<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ModuleActivity">

    <LinearLayout
        android:layout_width="125dp"
        android:layout_height="174dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="285dp"
        android:layout_marginRight="285dp"
        android:layout_marginBottom="428dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewModCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/module_code" />

        <TextView
            android:id="@+id/textViewModName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/module_name" />

        <TextView
            android:id="@+id/textViewAcadYr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/academic_year" />

        <TextView
            android:id="@+id/textViewModSem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/semester" />

        <TextView
            android:id="@+id/textViewModCred"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/module_credit" />

        <TextView
            android:id="@+id/textViewModVenue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/venue" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="285dp"
        android:layout_height="174dp"
        android:layout_marginStart="125dp"
        android:layout_marginLeft="125dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="428dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView" />

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView" />

        <TextView
            android:id="@+id/textViewYr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView" />

        <TextView
            android:id="@+id/textViewSem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView" />

        <TextView
            android:id="@+id/textViewCred"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView" />

        <TextView
            android:id="@+id/textViewVenue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>